removed unnecessary trips pages into one manageTrips,payment button,tripdetail buttons

--- a/templates/dashboard/pages/addComments/addComments.less
+++ b/templates/dashboard/pages/addComments/addComments.less
@@ -42,3 +42,14 @@
 		}
 	}
 }
+.alpaca-field-array {
+    border: 0px solid #eee;
+    border-radius: 0px;
+    padding: 0px;
+}
+
+.alpaca-field-object {
+    border: 0px solid #eee;
+    border-radius: 0px;
+    padding: 0px;
+}
