--- a/templates/dashboard/pages/manageTrip/assignedTrips.html
+++ b/templates/dashboard/pages/manageTrip/assignedTrips.html
@@ -1,7 +1,6 @@
-{{> header currentpage='manageTrips'}}
-<div class='trips-quotes'>
-    
-     <div class='trip-quotes-content'>            
+<!-- {{> header currentpage='manageTrips'}}
+<div class='assigned-trips'>
+    <div class='assigned-trips-content'>            
     </div>
 </div> 
 {{{{raw-helper}}}}
@@ -128,8 +127,8 @@
                                 <div>
                                     {{vehicleType}}
                                     {{#if requiredCapacity}}
-                                         with capacity {{requiredCapacity}} {{capacityUnit}} 
-                                    {{/if}}
+                                     with capacity {{requiredCapacity}} {{capacityUnit}} 
+                                     {{/if}}
                                     {{#if minRating}} with rating {{minRating}} {{/if}}
                                 </div>
                             {{/with}}
@@ -149,14 +148,25 @@
                 </div>  
             </div>
             {{/if}}
-            {{#if quotes}}
-                <div class="grid-row-title">Quote:</div> 
+            {{#if truckdetails}}            
+                <div class="grid-row-title">Truckdetails:</div>  
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
                             <span class="grid-row-tile-text">
-                                {{quotes.cost}} Rs(&#8377;)
-                                {{quotes.comment}}
+                            {{plateNumber}} {{truckType}}
+                            </span>
+                        </div>                                           
+                    </div>  
+                </div>
+             {{/if}} 
+            {{#if quotes}}
+                <div class="grid-row-title">TripCost:</div> 
+                <div class="row">     
+                    <div class="grid-row-tile col-sm-12">                
+                        <div>
+                            <span class="grid-row-tile-text">
+                                {{quotes.cost}} 
                             </span>
                         </div>                                           
                     </div>  
@@ -183,13 +193,9 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
-                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
-                <!-- <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button> -->
-                <button type="button" class="btn btn-default btn-primary approve-quote" _id="{{_id}}">Approve</button>
-                <button type="button" class="btn btn-default btn-primary reject-quote" _id="{{_id}}">Reject</button>
-                <button type="button" class="btn btn-default btn-primary cancel-trip" _id="{{_id}}">Cancel Trip</button>
-                
+                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>             
+                <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button>
+                <button type="button" class="btn btn-default btn-primary trip-details" _id="{{_id}}">View Details</button>
             </div>
         </div>       
     </div>
@@ -232,33 +238,4 @@
     </div>
 </div>
 </script>
-
-
-<script id="myModal" type="text/x-handlebars-template"> 
-    <div class="modal fade" id="myModalid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-             <div class="modal-dialog">
-                 <div class="modal-content">
-                   <div class="modal-header">
-                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                           &times;
-                       </button>
-                       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
-                   </div>
-                   <div class="modal-body myModalclass">
-                        If approved, payment is mandatory and once payment is received suitable truck & driver will be assigned to your trip.
-                   </div>
-                       
-                   <div class="modal-footer">
-                        <button type="submit" id="yes" class="btn btn-primary" name="submit" value="submit">
-                          Yes
-                      </button> 
-                       <button name="cancel" value="cancel" class="btn btn-default" data-dismiss="modal">
-                           Cancel
-                       </button>
-                   </div>
-                   </div>
-                   </div> 
-        </div>
-    </script> 
-
-{{{{/raw-helper}}}}
+{{{{/raw-helper}}}} -->
