--- a/templates/dashboard/pages/manageTrip/viewQuotes.html
+++ b/templates/dashboard/pages/manageTrip/viewQuotes.html
@@ -1,10 +1,11 @@
-{{> header currentpage='manageTrips'}}
-<div class='paymentPending-trips'>
-    <div class='paymentPending-trips-content'>            
+<!-- {{> header currentpage='manageTrips'}}
+<div class='trips-quotes'>
+    
+     <div class='trip-quotes-content'>            
     </div>
-</div> 
+</div>  -->
 {{{{raw-helper}}}}
-<script id="grid-row-template-details" type="text/x-handlebars-template">
+<!--<script id="grid-row-template-details" type="text/x-handlebars-template">
   <div class="container-fluid">
     <div class="row grid-row">
         <div class="col-sm-4 grid-row-container">
@@ -127,8 +128,8 @@
                                 <div>
                                     {{vehicleType}}
                                     {{#if requiredCapacity}}
-                                     with capacity {{requiredCapacity}} {{capacityUnit}} 
-                                     {{/if}}
+                                         with capacity {{requiredCapacity}} {{capacityUnit}} 
+                                    {{/if}}
                                     {{#if minRating}} with rating {{minRating}} {{/if}}
                                 </div>
                             {{/with}}
@@ -148,25 +149,14 @@
                 </div>  
             </div>
             {{/if}}
-            {{#if truckdetails}}            
-                <div class="grid-row-title">Truckdetails:</div>  
-                <div class="row">     
-                    <div class="grid-row-tile col-sm-12">                
-                        <div>
-                            <span class="grid-row-tile-text">
-                            {{plateNumber}} {{truckType}}
-                            </span>
-                        </div>                                           
-                    </div>  
-                </div>
-             {{/if}} 
             {{#if quotes}}
-                <div class="grid-row-title">TripCost:</div> 
+                <div class="grid-row-title">Quote:</div> 
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
                             <span class="grid-row-tile-text">
-                                {{quotes.cost}} 
+                                {{quotes.cost}} Rs(&#8377;)
+                                {{quotes.comment}}
                             </span>
                         </div>                                           
                     </div>  
@@ -193,10 +183,12 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>             
-                <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button>
-                <button type="button" class="btn btn-default btn-primary view-details" _id="{{_id}}">View Details</button>
-                <button type="button" class="btn btn-default btn-primary payment" _id="{{_id}}">Payment</button>
+                <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
+                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
+                <button type="button" class="btn btn-default btn-primary approve-quote" _id="{{_id}}">Approve</button>
+                <button type="button" class="btn btn-default btn-primary reject-quote" _id="{{_id}}">Reject</button>
+                <button type="button" class="btn btn-default btn-primary cancel-trip" _id="{{_id}}">Cancel Trip</button>
+                
             </div>
         </div>       
     </div>
@@ -238,5 +230,34 @@
         </div>
     </div>
 </div>
-</script>
-{{{{/raw-helper}}}}
+</script> -->
+
+
+<script id="viewquotesmodal" type="text/x-handlebars-template"> 
+    <div class="modal fade" id="viewquotesmodalid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+             <div class="modal-dialog">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                           &times;
+                       </button>
+                       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                   </div>
+                   <div class="modal-body myModalclass">
+                        If approved, payment is mandatory and once payment is received suitable truck & driver will be assigned to your trip.
+                   </div>
+                       
+                   <div class="modal-footer">
+                        <button type="submit" id="yes" class="btn btn-primary" name="submit" value="submit">
+                          Yes
+                      </button> 
+                       <button name="cancel" value="cancel" class="btn btn-default" data-dismiss="modal">
+                           Cancel
+                       </button>
+                   </div>
+                   </div>
+                   </div> 
+        </div>
+    </script> 
+
+{{{{/raw-helper}}}} 
