--- a/templates/dashboard/partials/cards.html
+++ b/templates/dashboard/partials/cards.html
@@ -1,8 +1,5 @@
-   
 
 <div class="row">
-        
-        
             <div class="col-xl-3 col-lg-6">
                 <div class="card card-green card-inverse">
                     <div class="card-header card-green">
@@ -17,7 +14,7 @@
                         </div>
                     </div>
                     <div class="card-footer card-green">
-                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.0.page}}');">
+                        <a href="javascript:navigateToPage('{{this.menu.SideMenu.0.options.0.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -40,7 +37,7 @@
                         </div>
                     </div>
                     <div class="card-footer card-green">
-                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.1.page}}');">
+                        <a href="javascript:navigateToPage('{{this.menu.SideMenu.0.options.1.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -62,7 +59,7 @@
                         </div>
                     </div>
                     <div class="card-footer card-yellow">
-                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.2.page}}');">
+                        <a href="javascript:navigateToPage('{{this.menu.SideMenu.0.options.2.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -84,7 +81,7 @@
                         </div>
                     </div>
                     <div class="card-footer card-red">
-                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.3.page}}');">
+                        <a href="javascript:navigateToPage('{{this.menu.SideMenu.0.options.3.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
