--- a/templates/dashboard/pages/addComments.html
+++ b/templates/dashboard/pages/addComments.html
@@ -1,6 +1,6 @@
 {{{{raw-helper}}}}
 <style>
-.comment-box{margin-top:30px!important}.comment-box img{width:50px;height:50px}.comment-box .media-left{padding-right:10px;width:65px}.comment-box .media-body p{border:1px solid #ddd;padding:10px}.comment-box .media-body .media p{margin-bottom:0}.comment-box .media-heading{background-color:#f5f5f5;border:1px solid #ddd;padding:7px 10px;position:relative;margin-bottom:-1px}.comment-box .media-heading:before{content:"";width:12px;height:12px;background-color:#f5f5f5;border:1px solid #ddd;border-width:1px 0 0 1px;-webkit-transform:rotate(-45deg);transform:rotate(-45deg);position:absolute;top:10px;left:-6px}
+.comment-box{margin-top:30px!important}.comment-box img{width:50px;height:50px}.comment-box .media-left{padding-right:10px;width:65px}.comment-box .media-body p{border:1px solid #ddd;padding:10px}.comment-box .media-body .media p{margin-bottom:0}.comment-box .media-heading{background-color:#f5f5f5;border:1px solid #ddd;padding:7px 10px;position:relative;margin-bottom:-1px}.comment-box .media-heading:before{content:"";width:12px;height:12px;background-color:#f5f5f5;border:1px solid #ddd;border-width:1px 0 0 1px;-webkit-transform:rotate(-45deg);transform:rotate(-45deg);position:absolute;top:10px;left:-6px}.alpaca-field-array{border:0 solid #eee;border-radius:0;padding:0}.alpaca-field-object{border:0 solid #eee;border-radius:0;padding:0}
 </style>
 {{{{/raw-helper}}}}
 {{> header}}
