--- a/templates/dashboard/pages/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip.html
@@ -1,6 +1,27 @@
 {{{{raw-helper}}}}
 {{{{/raw-helper}}}}
-{{> header currentpage='manageTrips'}}
+<div class="row">
+        <div class="col-lg-12">
+                <ol class="breadcrumb" style="margin-top: 10px;">
+                    <li class="active">
+                            <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa {{pageIcon}}"></i>  <BtnCaption>{{pageSubHeading}}</BtnCaption>  
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="javascript:statusChanged('New');">New Trips</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Quoted');">Quoted</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Paymentpending');">Payment Pending</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Running');">Running</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Assigned');">Assigned</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Successful');">Successful</a>
+                            <a class="dropdown-item" href="javascript:statusChanged('Cancelled');">Cancelled</a>
+                        </div>
+                        </div>
+                    </li>
+                </ol>
+        </div>
+    </div>
 <div class='manage-trips'>
      <div class='manage-trips-content'>            
     </div>
@@ -150,20 +171,6 @@
                 </div>  
             </div>
             {{/if}}
-           <!--  {{#if (ifArray comments)}}            
-                <div class="grid-row-title">Comments:</div>  
-                <div class="row">     
-                    <div class="grid-row-tile col-sm-12">                
-                        <div>
-                            <span class="grid-row-tile-text">
-                                {{#each comments}}
-                                    {{this}} <br/>
-                                {{/each}}
-                            </span>
-                        </div>                                           
-                    </div>  
-                </div>
-            {{/if}} -->
             {{#if quotes}}
                 <div class="grid-row-title">Quote:</div> 
                 <div class="row">     
@@ -195,54 +202,17 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
-                  <!-- <button type="button" class="btn btn-default btn-primary set-status-trip" _id="{{_id}}">Set Status</button>  -->
-                <!-- <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button> -->
+                {{#each (getGridOptions status _id)}}     
+                <button type="button" class="btn btn-default btn-primary {{id}}" _id="{{_id}}">{{option}}</button>
+                {{/each}}
             </div>
         </div>       
     </div>
   </div>
 </script>
-<script id="grid-row-template" type="text/x-handlebars-template">
-  <div class="container-fluid">
-    <div class="row grid-row">
-        <div class="col-sm-12 grid-row-container">
-            <span class="grid-row-title">Pickup</span> at 
-            {{#with pickup}}
-                {{address.street}}, {{address.city}} on {{date}}
-                {{{exceptOnFirst @index ','}}}
-                (<span class="grid-row-title">Contact:</span>             
-                {{#each contact}} 
-                    {{mobile}}
-                    {{{exceptOnFirst @index ','}}}
-                {{/each}})
-                (<span class="grid-row-title">Material:</span> 
-                {{#if material}} 
-                    {{name}} - {{materialType}}
-                    {{{exceptOnFirst @index ','}}}
-                {{/if}})
-            {{/with}}            
-            <br/>
-            <span class="grid-row-title">Drop</span> at 
-            {{#with drop}}
-                {{address.city}} on {{date}}
-                {{{exceptOnFirst @index ','}}}
-                (<span class="grid-row-title">Contact:</span> 
-                 {{#each contact}}                  
-                    {{mobile}}
-                    {{{exceptOnFirst @index ','}}}
-                {{/each}})
-                (<span class="grid-row-title">Items:</span> 
-                {{itemsToDrop}}
-                )
-            {{/with}}                       
-        </div>
-    </div>
-</div>
-</script>
 {{{{/raw-helper}}}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".manage-trips-content",{gridData:e,gridId:"gridManageTrips",rowConfig:{template:"grid-row-template-details",optionsTemplate:"grid-row-options-template",optionsEvent:"mouseover",optionsPostRender:function(e,t){$(e).find(".edit-trip").click(function(){MENU_HELPER.menuClick("addTripMin","manageTrip",{extraHref:t._id})}),$(e).find(".set-status-trip").click(function(){MENU_HELPER.menuClick("setStatus","manageTrip",{extraHref:t._id})}),$(e).find(".comments-trip").click(function(){MENU_HELPER.menuClick("addComments","manageTrip",{extraHref:t._id})})}},sortConfig:{multiple:!1,options:[{title:"Pickup Date",key:"pickup.date",selected:!0,order:"desc"},{title:"Drop Date",key:"drop.date"},{title:"Material Value",key:"pickup.material.approximateCost"}]},filterConfig:{type:"default",order:[],formOptions:{bindings:{"pickup.date_start":"column-1","pickup.date_end":"column-2","drop.date_start":"column-1","drop.date_end":"column-2",status:"column-1"},schemaOverride:{fields:{"pickup.date":{title:"Pickup Date",format:"date",rangeField:!0},"drop.date":{title:"Drop Date",format:"date",rangeField:!0},status:{"default":"Running"}}},optionsOverride:{fields:{"pickup.date_start":{order:1},"pickup.date_end":{order:2},"drop.date_start":{order:3},"drop.date_end":{order:4},status:{order:5}}}}}})});
+    console.log("template data",UTILS.getCurrentTemplateData());var currentStatus;$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".manage-trips-content",{gridData:e,gridId:"gridManageTrips",rowConfig:{template:"grid-row-template-details",optionsTemplate:"grid-row-options-template",optionsEvent:"mouseover",optionsPostRender:function(e,t){$(e).find(".edit-trip").click(function(){MENU_HELPER.menuClick("addTripMin","manageTrip",{extraHref:t._id})}),$(e).find(".edit-trip").click(function(){MENU_HELPER.menuClick("addTripMin","manageTrip",{extraHref:t._id})}),$(e).find(".comments-trip").click(function(){MENU_HELPER.menuClick("addComments","manageTrip",{extraHref:t._id})}),$(e).find(".docs-trip").click(function(){MENU_HELPER.menuClick("uploadDocs","manageTrip",{extraHref:t._id})}),$(e).find(".viewdetails").click(function(){MENU_HELPER.menuClick("viewTripDetails","manageTrip",{extraHref:t._id})}),$(e).find(".payment").click(function(){MENU_HELPER.menuClick("tripPayment","manageTrip",{extraHref:t._id})}),$(e).find(".cancel-trip").click(function(){MENU_HELPER.menuClick("cancelTrip","manageTrip",{extraHref:t._id})}),$(e).find(".approve-quote").click(function(){approveQuote(t)}),$(e).find(".reject-bid").click(function(){var e={};e.formData=JSON.stringify({truckDetails:t}),e.uri="requests/service/setStatus",e.extraHref="id="+t._id+"&status=Rejected",e.type="POST",API_HELPER.postData(e,function(e,t){if(e)return void console.log("error",e)})})}},sortConfig:{multiple:!1,options:[{title:"Pickup Date",key:"pickup.date",selected:!0,order:"desc"},{title:"Drop Date",key:"drop.date"},{title:"Material Value",key:"pickup.material.approximateCost"}]},filterConfig:{type:"default",order:[],formOptions:{bindings:{"pickup.date_start":"column-1","pickup.date_end":"column-2","drop.date_start":"column-1","drop.date_end":"column-2",status:"column-1"},schemaOverride:{fields:{"pickup.date":{title:"Pickup Date",format:"date",rangeField:!0},"drop.date":{title:"Drop Date",format:"date",rangeField:!0},status:{"default":"Running"}}},optionsOverride:{fields:{"pickup.date_start":{order:1},"pickup.date_end":{order:2},"drop.date_start":{order:3},"drop.date_end":{order:4},status:{order:5}}}}}});console.log(currentStatus),$(".dropdown").find(".btn BtnCaption").text(e.status),statusChanged=function(e){var t={data:{status:e}};currentStatus=e,MENU_HELPER.menuClick("manageTrip","manageTrip",t)},approveQuote=function(e){var t=(UTILS.getCurrentTemplateData("manageTruck"),$("#viewquotesmodal").html()),i=Handlebars.compile(t);$("body").append(i()),$("#viewquotesmodalid").modal({show:!0,background:!0}),$("#yes").click(function(){var t={};t.formData=JSON.stringify({tripDetails:e}),t.uri="trips/service/setStatus",t.extraHref="id="+e._id+"&status=Paymentpending",t.type="POST",API_HELPER.postData(t,function(t,i){return t?void console.log("error",t):void MENU_HELPER.menuClick("paymentPending","manageTrip",{extraHref:e._id})}),$("#viewquotesmodalid").modal("hide")})}}),Handlebars.registerHelper("getGridOptions",function(e,t){switch(e){case"New":return[{option:"Edit",_id:t,id:"edit-trip"},{option:"Comments",_id:t,id:"comments-trip"},{option:"Docs",_id:t,id:"docs-trip"},{option:"Cancel Trip",_id:t,id:"cancel-trip"}];case"Quoted":return[{option:"Edit",_id:t,id:"edit-trip"},{option:"Comments",_id:t,id:"comments-trip"},{option:"Approve",_id:t,id:"approve-quote"},{option:"Reject Trip",_id:t,id:"reject-quote"},{option:"Cancel Trip",_id:t,id:"cancel-trip"}];case"Paymentpending":return[{option:"Docs",_id:t,id:"docs-trip"},{option:"Comments",_id:t,id:"comments-trip"},{option:"ViewDetails",_id:t,id:"viewdetails"},{option:"Payment",_id:t,id:"payment"}];case"Running":case"Assigned":case"Successful":return[{option:"ViewDetails",_id:t,id:"viewdetails"},{option:"Comments",_id:t,id:"comments-trip"},{option:"Documents",_id:t,id:"docs-trip"}];case"Cancelled":return[{option:"ViewDetails",_id:t,id:"viewdetails"}]}});
 </script>
 {{{{/raw-helper}}}}
