--- a/templates/dashboard/pages/manageTrip/runningTrips.html
+++ b/templates/dashboard/pages/manageTrip/runningTrips.html
@@ -1,6 +1,6 @@
-{{> header}}
-<div class='manage-trips'>
-    <div class='manage-trips-content'>            
+<!-- {{> header currentpage='manageTrips'}}
+<div class='running-trips'>
+    <div class='running-trips-content'>            
     </div>
 </div> 
 {{{{raw-helper}}}}
@@ -8,8 +8,8 @@
   <div class="container-fluid">
     <div class="row grid-row">
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Pickup point(s):</div>                      
-                {{#each pickup}}
+            <div class="grid-row-title">Pickup point:</div>                      
+                {{#with pickup}}
                     {{{exceptOnFirst @index '<hr/>'}}}
                     <div class="row">     
                         <div class="grid-row-tile col-sm-12">                
@@ -21,12 +21,14 @@
                                 <span class="grid-row-tile-label">Address</span>
                                 <span class="grid-row-tile-text">
                                     {{#if address.organisation}} {{address.organisation}}, {{/if}}
-                                    {{#if address.address}} {{address.address}}, {{/if}}
-                                    {{address.location}}, {{address.zip}}.
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
                                 </span>                    
                             </div>                            
                         </div>  
                     </div>
+                    {{#if contact}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Contact(s)</span>
@@ -41,11 +43,12 @@
                             </div>
                         </div> 
                     </div> 
+                    {{/if}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Material(s)</span>
                             <div>        
-                                {{#each material}} 
+                                {{#with material}} 
                                     <div>                                        
                                          <span class="grid-row-tile-text">
                                             {{name}} 
@@ -54,31 +57,35 @@
                                             {{#if approximateCost}} - valued at {{currency approximateCost}} {{/if}}
                                         </span>                   
                                     </div>                                                                             
-                                {{/each}}
+                                {{/with}}
                             </div>
                         </div> 
                     </div>                    
-                {{/each}}                                   
+                {{/with}}                                   
         </div>   
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Drop point(s):</div>                      
-                {{#each drop}}
+            <div class="grid-row-title">Drop point:</div>                      
+                {{#with drop}}
                     <div class="row">     
                         <div class="grid-row-tile col-sm-12">                
+                            {{#if date}}
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
                                 <span class="grid-row-tile-text">{{date}}</span>
                             </div>
+                            {{/if}}
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
                                 <span class="grid-row-tile-text">
                                     {{#if address.organisation}} {{address.organisation}}, {{/if}}
-                                    {{#if address.address}} {{address.address}}, {{/if}}
-                                    {{address.location}}, {{address.zip}}.
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
                                 </span>                    
                             </div>                            
                         </div>  
                     </div>
+                    {{#if contact}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Contact(s)</span>
@@ -93,60 +100,52 @@
                             </div>
                         </div> 
                     </div> 
+                    {{/if}}
+                    {{#if itemsToDrop}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <div>        
                                 <span class="grid-row-tile-label">Items to drop</span>
                                 <span class="grid-row-tile-text">
+                                    {{#if itemsToDrop}}
                                     {{commaSeperatedArray itemsToDrop}}                                    
+                                    {{/if}}
                                 </span>
                             </div>
                         </div> 
-                    </div>                                     
-                {{/each}}                                   
+                    </div>           
+                    {{/if}}                          
+                {{/with}}                                   
         </div>  
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Vehicle Requirements:</div> 
-            <div class="row">     
-                <div class="grid-row-tile col-sm-12">                
-                    <div>
-                        <span class="grid-row-tile-text">
-                            {{#each vehicleRequirements}}
-                                <div>
-                                    {{vechicleType}} with capacity {{requiredCapacity}} {{capacityUnit}} 
-                                    {{#if minRating}} with rating {{minRating}} {{/if}}
-                                </div>
-                            {{/each}}
-                        </span>
-                    </div>                                           
-                </div>  
-            </div>
-            <div class="grid-row-title">Total Weight:</div> 
-             <div class="row">     
-                <div class="grid-row-tile col-sm-12">                
-                    <div>
-                        <span class="grid-row-tile-text">
-                            {{totalWeight}} {{totalWeightUnit}}
-                        </span>
-                    </div>                                           
-                </div>  
-            </div>
-            {{#if (ifArray comments)}}            
-                <div class="grid-row-title">Comments:</div>  
+          {{#if truckdetails}}            
+                <div class="grid-row-title">Truckdetails:</div>  
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
                             <span class="grid-row-tile-text">
-                                {{#each comments}}
-                                    {{this}} <br/>
-                                {{/each}}
+                               {{plateNumber}} {{truckType}}
                             </span>
                         </div>                                           
                     </div>  
                 </div>
-            {{/if}}
-            {{#if quotes}}
-                <div class="grid-row-title">Quote:</div> 
+            {{/if}} 
+
+            {{#if currentPoint}}            
+            <div class="grid-row-title">Current location:</div>  
+            <div class="row">     
+                <div class="grid-row-tile col-sm-12">                
+                    <div>
+                        <span class="grid-row-tile-text">
+                           {{currentPoint}}
+                        </span>
+                    </div>                                           
+                </div>  
+            </div>
+        {{/if}} 
+
+                {{#if quotes}}
+                <div class="grid-row-title">TripCost:</div> 
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
@@ -178,11 +177,8 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Add Comments</button>
-                 <button type="button" class="btn btn-default btn-primary set-status-trip" _id="{{_id}}">Set Status</button>
-<!--                 <button type="button" class="btn btn-default btn-primary driver-details-trip" _id="{{_id}}">Set Driver Details</button> -->
-<!--                 <button type="button" class="btn btn-default btn-primary quote-trip" _id="{{_id}}">Set Quote</button> -->
-                <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
+                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
+                <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button>
             </div>
         </div>       
     </div>
@@ -193,7 +189,7 @@
     <div class="row grid-row">
         <div class="col-sm-12 grid-row-container">
             <span class="grid-row-title">Pickup</span> at 
-            {{#each pickup}}
+            {{#with pickup}}
                 {{address.street}}, {{address.city}} on {{date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span>             
@@ -202,14 +198,14 @@
                     {{{exceptOnFirst @index ','}}}
                 {{/each}})
                 (<span class="grid-row-title">Material:</span> 
-                {{#each material}} 
+                {{#if material}} 
                     {{name}} - {{materialType}}
                     {{{exceptOnFirst @index ','}}}
-                {{/each}})
-            {{/each}}            
+                {{/if}})
+            {{/with}}            
             <br/>
             <span class="grid-row-title">Drop</span> at 
-            {{#each drop}}
+            {{#with drop}}
                 {{address.city}} on {{date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span> 
@@ -220,9 +216,9 @@
                 (<span class="grid-row-title">Items:</span> 
                 {{itemsToDrop}}
                 )
-            {{/each}}                       
+            {{/with}}                       
         </div>
     </div>
 </div>
 </script>
-{{{{/raw-helper}}}}
+{{{{/raw-helper}}}} -->
